# xfetch-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: main.rs
examples/: early_expire_probability.rs
src/: lib.rs
