[package]
name = "xfetch"
version = "1.0.0"
description = "Optimal Probabilistic Cache Stampede Prevention"
authors = ["Kan-Ru Chen <kanru@kanru.info>"]
documentation = "https://docs.rs/xfetch"
homepage = "https://github.com/kanru/xfetch-rs"
repository = "https://github.com/kanru/xfetch-rs"
readme = "README.md"
keywords = ["cache", "xfetch"]
categories = ["algorithms", "caching"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rand = "0.7.2"

[dev-dependencies]
lru = "0.4.0"
criterion = "0.3.0"

[[bench]]
name = "main"
harness = false
