[package]
name = "xfetch"
version = "1.0.1"
description = "Optimal probabilistic cache refresh algorithm"
authors = ["Kan-Ru Chen <kanru@kanru.info>"]
documentation = "https://docs.rs/xfetch"
homepage = "https://github.com/kanru/xfetch-rs"
repository = "https://github.com/kanru/xfetch-rs"
readme = "README.md"
keywords = ["cache", "xfetch", "lru", "distributed"]
categories = ["algorithms", "caching"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
rand = "0.7.3"

[dev-dependencies]
lru = "0.7.6"
criterion = "0.3.0"

[[bench]]
name = "main"
harness = false
